# invest-alert-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  config.yaml  plan.md  prd.md  pyproject.toml  readme.md  readme.zh-CN.md  tradingagents-iteration.md
app/: __init__.py  main.py
app/core/: analysis_env.py  authorship.py  config.py  logging.py
app/notifiers/: telegram.py  telegram_commands.py
app/providers/: base.py  binance_rest.py  binance_ws.py  tradingagents_client.py  yfinance_poll.py
app/schemas/: alert.py  analysis.py  config.py  market.py
app/scripts/: __init__.py  get_chat_id.py  test_telegram.py
app/services/: alert_manager.py  analysis_context.py  analysis_report.py  analysis_worker.py  coordinator.py  engine.py  report_html.py  status_format.py  symbol_monitor.py
tests/: test_alert_manager.py  test_analysis_context.py  test_analysis_env.py  test_analysis_report.py  test_engine.py  test_status_format.py
